<resources>
    <string name="app_name" translatable="false">QR Chat</string>
    <string name="hyperlink">Agree to <a href="">Terms  \u0026 Conditions</a></string>
    <string name="signup"><u>Sign up</u></string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="pleaseenternumberqrid">Please Enter Number (OR) QR Id</string>
    <string name="pleaseenterpassword">Please Enter Password</string>
    <string name="username">Number ( OR ) QRid</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="forgotPasswordqn">Forgot Password?</string>
    <string name="invalidlogin">Invalid Number or Password</string>
    <string name="donthaveanaccount">Do not have an account?</string>
    <string name="pleaseuploadpicture">Please Upload your picture</string>
    <string name="pleaseentername" translatable="false">Please Enter Name</string>
    <string name="pleaseenterregion" translatable="false">Please Select Region</string>
    <string name="pleaseenternumber" translatable="false">Please Enter Number</string>
    <string name="minimumNumber" translatable="false">Please Enter Number with minimum 4 digits </string>
    <string name="pleaseacceptTC" translatable="false">Please Accept Terms  \u0026 Conditions</string>
    <string name="selectAction" translatable="false">Select Action</string>
    <string name="selectfromgallery" translatable="false">Select photo from gallery</string>
    <string name="selectfromcamera" translatable="false">Capture photo from camera</string>
    <string name="register" translatable="false">Register</string>
    <string name="createyouraccount">Create your account</string>
    <string name="uploadyourpic">Upload your picture</string>
    <string name="name">Name</string>
    <string name="region">Region</string>
    <string name="number">Number</string>
    <string name="success">Success</string>
    <string name="incorrect">Incorrect</string>
    <string name="pleaseenterotp">Please Enter OTP</string>
    <string name="pleaseentervalidotp">Please Enter Valid OTP</string>
    <string name="submitsuccessfull">Submit Successfull</string>
    <string name="resetpassword">Reset Password</string>
    <string name="enterpassword">Please Enter Password</string>
    <string name="enterNewpassword">Please Enter New Password</string>
    <string name="passwordValidation">Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters</string>
    <string name="enterconfirmpassword">Please Enter Confirm Password</string>
    <string name="passworddoesntmatch">Password \u0026 Confirm Password does not match</string>
    <string name="passwordsubmitted">Registered Successfully. Please Login.</string>
    <string name="passwordrestsuccess">Password is Reset. Please Login.</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="onetimepassword">One Time Password</string>
    <string name="enterotpsenttoregisteredmobilenumber">Enter the OTP Sent to your registered Mobile Number</string>
    <string name="resendotp">Resend OTP</string>
    <string name="chats">Chats</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="Language">Language</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="choose_language_str">Choose Language</string>
    <string name="telugu_str">Arabic</string>
    <string name="english_str">English</string>
    <string name="nochat">No Chat Data Available</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search</string>
    <string name="server_error">An Error occured</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="updateprofile">Update Profile</string>
    <string name="myprofile">My Profile</string>
    <string name="pleaseenteremail">Please Enter Email</string>
    <string name="pleaseenterstatus">Please Enter Status</string>
    <string name="pleaseenterlocation">Please Enter Location</string>
    <string name="selectgender">Please Select Gender</string>
    <string name="qrscanner">QR Scanner</string>
    <string name="Sendmoney">Send Money</string>
    <string name="Recivemoney">Recieve Money</string>
    <string name="spiltMoney">Split Money</string>
    <string name="hadiatmoney">Hadiat Money</string>
    <string name="transactions">Transactions</string>
    <string name="confirmation">Confirmation</string>
    <string name="alert_logout">Are you sure you want to Logout?</string>
    <string name="newpassword">New Password</string>
    <string name="lifeshots">Life Shots</string>
    <string name="walkinplatform">Walk in Platform</string>
    <string name="news">News</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="findNearby">Find Nearby</string>
    <string name="qrpayaccount">QRChat-PAY Account</string>
    <string name="mylifeshots">My Lifeshots</string>
    <string name="favorites">Favorites</string>
    <string name="stickersgallery">Stickers Gallery</string>
    <string name="accountsettings">Account Settings</string>
    <string name="appsettings">App Settings</string>
    <string name="displayName">Dislay Name</string>
    <string name="qrpayId">QR-Pay ID:</string>
    <string name="phone">Phone</string>
    <string name="qrchatid">QRChat Id</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="Instagram">Instagram</string>
    <string name="loggeddevices">Logged Devices</string>
    <string name="switchaccount">Switch Account</string>
    <string name="logout">Log Out</string>
    <string name="textsize">Text Size</string>
    <string name="datausage">Data Usage</string>
    <string name="autodownload">Auto Download</string>
    <string name="theme">Theme</string>
    <string name="managestorage">Manage Storage</string>
    <string name="security">Security</string>
    <string name="apppermissions">App Permissions</string>
    <string name="money">Money</string>
    <string name="wallet">Wallet</string>
    <string name="dailyservices">Daily Services</string>
    <string name="entertainment">Entertainment</string>
    <string name="booking">Booking</string>
    <string name="mobilerecharge">Mobile \nRecharge</string>
    <string name="kaharamaelecwater">Kaharama \n Elec Water</string>
    <string name="qatarcharity">Qatar \nCharity</string>
    <string name="onlineshopping">Online \nShopping</string>
    <string name="qticket">Q-Ticket</string>
    <string name="ebooking">E Booking</string>
    <string name="cinema">Cinema</string>
    <string name="hotels">Hotels</string>
    <string name="flightBookings">Flight \nBookings</string>
    <string name="food">Food</string>
    <string name="bus">Bus</string>
    <string name="qrmoney">QR Money</string>
    <string name="payfrom">Pay from</string>
    <string name="receiveMoney">Receive Money</string>
    <string name="payforcreditcard">Pay for Credit Card</string>
    <string name="sendtobankAccount">Send to Bank</string>
    <string name="payforqatarcharity">Pay for Qatar Charity</string>
    <string name="paythroughqrcode">Pay with QR Code</string>
    <string name="donotshare">Do not Share this code with others/screenshot</string>
    <string name="terms">Terms and Conditions</string>
    <string name="scanqrtopaymoney">Scan QR Code to Pay</string>
    <string name="receivemoneyfromanyqrchatuser">Receive Money from any QRCHAT User</string>
    <string name="saveqrimage">Save QR Image</string>
    <string name="withamount">With Amount</string>
    <string name="managereceipt">Manage Receipts</string>
    <string name="scan">Scan</string>
    <string name="creatgroup">Create Group</string>
    <string name="addfriends">Add Friends</string>
    <string name="newchat">New Chat</string>
    <string name="qrcare">Qr Care</string>
    <string name="qrwallet">QR-Wallet</string>
    <string name="balance">Balance</string>
    <string name="toptup">Top-up</string>
    <string name="withdraw">Withdraw</string>
    <string name="managecards">Manage Cards</string>
    <string name="transactionshistory">Transaction History</string>
    <string name="paymentprivacy">Payment Privacy</string>
    <string name="helpcenter">Help Center</string>
    <string name="label_buy_now">Submit</string>
    <string name="cardtype">Card Type</string>
    <string name="bankname">Bank Name</string>
    <string name="cardholdername">Card Holder Name</string>
    <string name="pleaseentercardholdername">Please Enter Cardholder Name</string>
    <string name="pleaseenterbankname">Please Enter Bank Name</string>
    <string name="selectcardtype">Please select Card Type</string>
    <string name="isdefault">IsDefault</string>
    <string name="Addnewcard">Add New Card</string>
    <string name="paymentdetails">Payment Details</string>
    <string name="text_settings_header_title">My settings</string>
    <string name="text_settings_header_edit_button">EDIT</string>
    <string name="text_settings_user_id_badge">User ID</string>
    <string name="text_settings_theme_title">Dark theme</string>
    <string name="text_settings_disturb_title">Do not disturb</string>
    <string name="text_settings_sign_out_title">Sign out</string>
    <string name="text_settings_change_user_nickname">Change nickname</string>
    <string name="text_settings_change_user_nickname_hint">Enter nickname</string>
    <string name="text_settings_change_user_profile_image">Change profile image</string>
    <string name="text_tab_channels">Channels</string>
    <string name="text_tab_settings">My settings</string>
    <string name="text_tab_badge_max_count">99+</string>
    <string name="text_version_info">UI Kit v%1$s &#160;&#160;&#160;&#160; SDK v%2$s</string>
    <string name="Camera">Camera</string>
    <string name="voicecall">Voice Call</string>
    <string name="vediocall">Video Call</string>
    <string name="gallery">Gallery</string>
    <string name="transFer">Transfer</string>
    <string name="contacts">Contacts</string>
    <string name="hadiat">Hadlyat</string>
    <string name="nocontactAvailable">No Contact Available</string>
    <string name="nickname">Nick Name</string>
    <string name="enternickname">Please Enter NickName</string>
    <string name="request_external_storage">Storage access permissions are required to upload/download files.</string>
    <string name="enterAmount">Enter Amount</string>
    <string name="amountdetails">Amount Details</string>
    <string name="selectCard">Select Card</string>
    <string name="groups">Groups</string>
    <string name="viewcontacts">View Contacts</string>
    <string name="searchhint">Search</string>
    <string name="notifictions">Notifications</string>
    <string name="media">Media </string>
    <string name="clearchat">Clear Chat</string>
    <string name="report">Report</string>
    <string name="edit">Edit</string>
    <string name="payfund">Pay Fund</string>
    <string name="about">About</string>
    <string name="lastseen">Last seen</string>
    <string name="profilephoto">Profile photo</string>
    <string name="livelocation">Live location</string>
    <string name="share">Share</string>
    <string name="viewinaddressbook">View in address book</string>
    <string name="verifysecuritycode">Verify security code</string>
    <string name="Send">Send</string>
    <string name="contactus">Contact Us</string>
    <string name="fullname">Full Name</string>
    <string name="breifmessage">Breif Message</string>
</resources>