<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grp1">
    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@drawable/ic_contactss"
        android:title="@string/viewcontacts"
        android:actionLayout="@layout/cart_update_count"
        app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/grp2">
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:title="@string/searchhint"
        android:icon="@drawable/ic_search"
        android:actionLayout="@layout/cart_update_count"
        app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/grp3">
    <item
        android:id="@+id/action_ntifications"
        android:enabled="true"
        android:title="@string/notifictions"
        android:icon="@drawable/ic_notification"
        android:actionLayout="@layout/cart_update_count"
        app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/grp4">
    <item
        android:id="@+id/action_transactionhistory"
        android:enabled="true"
        android:title="@string/transactions"
        android:icon="@drawable/ic_transactionsss"
        app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/grp5">
    <item
        android:id="@+id/action_media"
        android:enabled="true"
        android:actionLayout="@layout/cart_update_count"
        android:title="@string/media"
        android:icon="@drawable/ic_attachments"
        app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/grp6">
    <item
        android:id="@+id/action_clearchat"
        android:enabled="true"
        android:title="@string/clearchat"
        android:icon="@drawable/ic_clear_chat"
        app:showAsAction="ifRoom"/>
    </group>
    <group android:id="@+id/grp7">
    <item
        android:id="@+id/action_report"
        android:enabled="true"
        android:actionLayout="@layout/cart_update_count"
        android:title="@string/report"
        android:icon="@drawable/ic_report"
        app:showAsAction="ifRoom"/>
    </group>

</menu>