<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_call"
        android:enabled="true"
        android:title="@string/call"
        android:icon="@drawable/ic_calll"
        app:showAsAction="ifRoom"/>
    <item
        android:enabled="true"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@drawable/ic_life_shots"
        android:title="@string/explore"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"/>
</menu>