<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:padding="10dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payfund"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textColor="@color/appColor"/>

    <LinearLayout
        android:id="@+id/haveownvehicle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative1"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/fundamount"
            android:inputType="number"
            style="@style/CustomRectEditText"
            android:hint="@string/enterAmount"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/addpeople_btn"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/submit"
            style="@style/Common_Button"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Common_Button"
            android:text="@string/cancel"/>

    </LinearLayout>

</LinearLayout>