<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="550dp"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amountdetails"
        android:textColor="@color/appColor"
        android:textSize="20dp"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enterAmount"
        android:gravity="bottom"
        android:paddingTop="4dp"
        android:clipToPadding="false"
        android:textColorHint="@color/black">

        <EditText
            android:id="@+id/amount_et"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingStart="10dp"
            style="@style/CustomEditText"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectCard"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/nocardavailablee"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="No Cards Available"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedcards"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="4dp" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"

        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/submitAmountdetailsbtn"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:visibility="gone"
            android:text="@string/submit"
            style="@style/Common_Button"/>

        <Button
            android:id="@+id/cancelAmountdetailsBtn"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Common_Button"
            android:text="@string/cancel"/>

    </LinearLayout>


</LinearLayout>