<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    tools:context=".Views.home.ProfileSubActivities.ReceiveMoneyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarTheme.ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/appColor"
        android:visibility="visible"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">
            <TextView
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/back"
                android:text="@string/qrmoney"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_weight="0.1"
        android:layout_margin="5dp"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/receiveMoney"
        android:textSize="18dp"
        android:background="@color/appColor"
        android:textColor="@color/white"
        android:drawableLeft="@drawable/lightrecievedmoney"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanqrtopaymoney"
            android:textAlignment="center"
            android:layout_above="@id/image"
            android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:adjustViewBounds="true"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bigqrcode"/>

    <ImageView
        android:id="@+id/imagef"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/compass" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receivemoneyfromanyqrchatuser"
            android:textAlignment="center"
            android:layout_below="@id/image"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/saveqrimage"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/withamount"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:layout_marginTop="10dp"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/managereceipt"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dottedline"/>


    </LinearLayout>

</LinearLayout>